--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="https://kostya201206.github.io/style.css">
+    </head>
     <header>
         <div class=gerb>
         </div>
